--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "next": "13.0.5",
+    "nodemailer": "^7.0.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
